<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Galaxy Fun Park</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="syncDB">synchronize Data</string>
    <string name="Main">Main</string>
    <string name="Logout">Logout</string>
    <string name="getV"> "get version" </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="menu_connect_bluetooth">Connect (Bluetooth)</string>
    <string name="menu_connect_network">Connect (Network)</string>
    <string name="menu_connect_usb">Connect (USB)</string>
    <string name="menu_connect_wifi_p2p">Connect (Wi-Fi P2P)</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="alignment">Alignment</string>
    <string name="left_alignment">Left alignment</string>
    <string name="center_alignment">Center alignment</string>
    <string name="right_alignment">Right alignment</string>
    <string name="character_font">Character font</string>
    <string name="font_a">Font A</string>
    <string name="font_b">Font B</string>
    <string name="font_c">Font C</string>
    <string name="underline">Underline</string>
    <string name="underline_none">Underline none</string>
    <string name="underline_1dot_thick">Underline 1-dot thick</string>
    <string name="underline_2dot_thick">Underline 2-dot thick</string>
    <string name="emphasized">Emphasized</string>
    <string name="reverse">Reverse</string>
    <string name="horizontal_direction">Enlarged in horizontal direction</string>
    <string name="vertical_direction">Enlarged in vertical direction</string>
    <string name="print">Print</string>
    <string name="slogan">Our brand statement, \"A better solution for your business\" is derived from our key concept of our brand, \"Devotion\". This statement approaches our customers as the Business Printing Solution Expert, while maintaining the friendliness and welcoming brand image. The brand statement logo reflects the same principle by adopting a simple and minimalist font to express clear contrast and the strong borders on the frame to visualize firm, honest, and True Expert image. BIXOLON\'s brand statement logo acts as an important medium to convey our corporate image, thus the logo must maintain its form and color in all cases.</string>
    <string name="bar_code_system">Bar code system</string>
    <string name="upc_a">UPC-A</string>
    <string name="upc_e">UPC-E</string>
    <string name="ean13">EAN13</string>
    <string name="ean8">EAN8</string>
    <string name="code39">CODE39</string>
    <string name="itf">ITF</string>
    <string name="codabar">CODABAR</string>
    <string name="code93">CODE93</string>
    <string name="code128">CODE128</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="character_position">Character position</string>
    <string name="not_printed">Not printed</string>
    <string name="above_the_bar_code">Above the bar code</string>
    <string name="below_the_bar_code">Below the bar code</string>
    <string name="both_above_and_below_the_bar_code">Both above and below the bar code</string>
    <string name="data">Data</string>
    <string name="bar_code_width_hint">from 1 to 6</string>
    <string name="bar_code_height_hint">from 1 to 255</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number162">162</string>
    <string name="upc_a_data">012345678905</string>
    <string name="homepage">http://www.bixolon.com</string>
    <string name="qrcode_model">QR Code model</string>
    <string name="model1">Model 1</string>
    <string name="model2">Model 2</string>
    <string name="size">Size</string>
    <string name="pdf417_width_hint">from 2 to 3</string>
    <string name="pdf417_height_hint">from 2 to 8</string>
    <string name="qrcode_size_hint">from 1 to 8</string>
    <string name="maxicode_mode">Mode for Maxi Code</string>
    <string name="mode2">Mode 2</string>
    <string name="mode3">Mode 3</string>
    <string name="mode4">Mode 4</string>
    <string name="datamatrix_size_hint">from 2 to 3</string>
    <string name="gallery">Gallery</string>
    <string name="content_description">contentDescription</string>
    <string name="number0">0</string>
    <string name="number100">100</string>
    <string name="number50">50</string>
    <string name="width_none">None</string>
    <string name="width_full">Full</string>
    <string name="level">Level</string>
    <string name="level_hint">from 13 to 88</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="control_command">Control command</string>
    <string name="get_response">Get response</string>
    <string name="mode">Mode</string>
    <string name="standard_mode">Standard mode</string>
    <string name="page_mode">Page mode</string>
    <string name="print_direction">Print direction</string>
    <string name="degree_0">0-degree rotation</string>
    <string name="degree_90">90-degree rotation</string>
    <string name="degree_180">180-degree rotation</string>
    <string name="degree_270">270-degree rotation</string>
    <string name="horizontal_start_position">Horizontal start position</string>
    <string name="vertical_start_position">Vertical start position</string>
    <string name="horizontal_print_area">Horizontal print area</string>
    <string name="vertical_print_area">Vertical print area</string>
    <string name="number384">384</string>
    <string name="number840">840</string>
    <string name="form_feed">Form feed</string>
    <string name="find_bluetooth_printers">Find Blueooth printers</string>
    <string name="number9100">9100</string>
    <string name="ip_address">192.168.0.0</string>
    <string name="define">Define</string>
    <string name="print_all">Print all</string>
    <string name="remove">Remove</string>
    <string name="remove_all">Remove all</string>
    <string name="key_code_list">Key code list</string>
    <string name="key_code">Key code</string>
    <string name="key_code_hint">from 0 to 255</string>
    <string name="direct_io_hint">Example: 10 04 02</string>
    <string name="enable_power_saving_mode">Enable power saving mode</string>
    <string name="power_saving_time">Power saving time</string>
    <string name="power_saving_time_hint">from 5 to 255</string>
    <string name="sec">sec.</string>
    <string name="number20">20</string>
    <string name="print_sample1">Print sample1</string>
    <string name="print_sample2">Print sample2</string>
    <string name="dot_matrix_method">Dot matrix method (SRP-275II)</string>
    <string name="set">Set</string>
    <string name="repeat">Repeat</string>
    <string name="number10">10</string>
    <string name="title_activity_tph_thermister_status">TphThermisterStatusActivity</string>
    <string name="title_activity_page_mode">PageModeActivity</string>
    <string name="receipt_sample1">384</string>
    <string name="receipt_sample2">Kooloora Ave 5\n2096 Queenscliff</string>
    <string name="receipt_sample3">MERCHANT ID</string>
    <string name="receipt_sample4">ZS155377#</string>
    <string name="receipt_sample5">TERMINAL</string>
    <string name="receipt_sample6">82389775</string>
    <string name="receipt_sample7">REFERENCE\n</string>
    <string name="receipt_sample8">182230</string>
    <string name="receipt_sample9">CUSTOMER COPY</string>
    <string name="receipt_sample10">CARD NO :</string>
    <string name="receipt_sample11">294450&#8211;176(I)</string>
    <string name="receipt_sample12">EXPIRATION DATE :</string>
    <string name="receipt_sample13">12/16</string>
    <string name="receipt_sample14">VISA CARD</string>
    <string name="receipt_sample15">CREDIT\nPURCHASE\nTIP\n\nTOTAL\n</string>
    <string name="receipt_sample16">*APPROVED\n</string>
    <string name="receipt_sample17">00</string>
    <string name="receipt_sample18">AUTH NO :</string>
    <string name="receipt_sample19">182937</string>
    <string name="receipt_sample20">AID :</string>
    <string name="receipt_sample21">A0001927354445</string>
    <string name="receipt_sample22">ATC : 110</string>
    <string name="receipt_sample23">TVR : 2822287630</string>
    <string name="receipt_sample24">CSN : 08</string>
    <string name="receipt_sample25">1172677333555667</string>
    <string name="track1">Track1</string>
    <string name="track2">Track2</string>
    <string name="track3">Track3</string>
    <string name="msr_setting_value">MSR setting value</string>
    <string name="transmit_read_command">Transmit read command</string>
    <string name="cancel_msr_reader_mode">Cancel MSR reader mode</string>
    <string name="dithering">Dithering</string>
    <string name="compress">Compress</string>
    <string name="code_page437">Ç ü é â ä à å ç ê ë è ï î ì Ä Å\n
        É æ Æ ô ö ò û ù ÿ Ö Ü ¢ £ ¥ ₧ ƒ\n
        á í ó ú ñ Ñ ª º ¿ ⌐ ¬ ½ ¼ ¡ « »\n
        ░ ▒ ▓ │ ┤ ╡ ╢ ╖ ╕ ╣ ║ ╗ ╝ ╜ ╛ ┐\n
        └ ┴ ┬ ├ ─ ┼ ╞ ╟ ╚ ╔ ╩ ╦ ╠ ═ ╬ ╧\n
        ╨ ╤ ╥ ╙ ╘ ╒ ╓ ╫ ╪ ┘ ┌ █ ▄ ▌ ▐ ▀\n
        α ß Γ π Σ σ µ τ Φ Θ Ω δ ∞ φ ε ∩\n
        ≡ ± ≥ ≤ ⌠ ⌡ ÷ ≈ ° ∙ · √ ⁿ ² ■\n\n\n\n</string>
    <string name="code_page737">Α Β Γ Δ Ε Ζ Η Θ Ι Κ Λ Μ Ν Ξ Ο Π\n
        Ρ Σ Τ Υ Φ Χ Ψ Ω α β γ δ ε ζ η θ\n
		ι κ λ μ ν ξ ο π ρ σ ς τ υ φ χ ψ\n
		░ ▒ ▓ │ ┤ ╡ ╢ ╖ ╕ ╣ ║ ╗ ╝ ╜ ╛ ┐\n
		└ ┴ ┬ ├ ─ ┼ ╞ ╟ ╚ ╔ ╩ ╦ ╠ ═ ╬ ╧\n
		╨ ╤ ╥ ╙ ╘ ╒ ╓ ╫ ╪ ┘ ┌ █ ▄ ▌ ▐ ▀\n
		ω ά έ ή ϊ ί ό ύ ϋ ώ Ά Έ Ή Ί Ό Ύ\n
		Ώ ± ≥ ≤ Ϊ Ϋ ÷ ≈ ° ∙ · √ ⁿ ² ■\n\n\n\n</string>
    <string name="code_page_katakana">▁	▂ ▃ ▄ ▅ ▆ ▇ █ ▏  ▎	 ▍  ▌ ▋  ▊ ▉ ┼\n
	     ┻ ┳ ┫ ┣ ─ ━ │ ┃ ┏ ┓ ┗ ┛ ╭ ╮ ╯ ╰\n
	     。 「 」 、 ・ ヲ ァ ィ ゥ ェ ォ ャ ュ ョ ッ\n
	     ー ア イ ウ エ オ カ キ ク ケ コ サ シ ス セ ソ\n
	     タ チ ツ テ ト ナ ニ ヌ ネ ノ ハ ヒ フ ヘ ホ マ\n
	     ミ ム メ モ ヤ ユ ヨ ラ リ ル レ ロ ワ ン ゛ ゜\n
	     〓 ◢ ◣ ◤ ◥ ♠ ♥ ♦ ♣ ● ○ ╱ ╲\n
	     ╳ 円 年 月 日 時 分 秒 〒 市 区 町 村 人 ▒\n\n\n\n</string>
    <string name="code_page775">Ć ü é ā ä ģ å ć ł ē Ŗ ŗ ī Ź Ä Å\n
        É æ Æ ō ö Ģ ¢ Ś ś Ö Ü ø £ Ø × ¤\n
        Ā Ī ó Ż ż ź ” ¦ © ® ¬ ½ ¼ Ł « »\n
        ░ ▒ ▓ │ ┤ Ą Č Ę Ė ╣ ║ ╗ ╝ Į Š ┐\n
        └ ┴ ┬ ├ ─ ┼ Ų Ū ╚ ╔ ╩ ╦ ╠ ═ ╬ Ž\n
        ą č ę ė į š ų ū ž ┘ ┌ █ ▄ ▌ ▐ ▀\n
        Ó ß Ō Ń õ Õ µ ń Ķ ķ Ļ ļ ņ Ē Ņ ’\n
        ± “ ¾ ¶ § ÷ „ ° ∙ · ¹ ³ ² ■\n\n\n\n</string>
    <string name="code_page850">Ç ü é â ä à å ç ê ë è ï î ì Ä Å\n
        É æ Æ ô ö ò û ù ÿ Ö Ü ø £ Ø × ƒ\n
        á í ó ú ñ Ñ ª º ¿ ® ¬ ½ ¼ ¡ « »\n
        ░ ▒ ▓ │ ┤ Á Â À © ╣ ║ ╗ ╝ ¢ ¥ ┐\n
        └ ┴ ┬ ├ ─ ┼ ã Ã ╚ ╔ ╩ ╦ ╠ ═ ╬ ¤\n
        ð Ð Ê Ë È ı Í Î Ï ┘ ┌ █ ▄ ¦ Ì ▀\n
        Ó ß Ô Ò õ Õ µ þ Þ Ú Û Ù ý Ý ¯ ´\n
        ± ‗ ¾ ¶ § ÷ ¸ ° ¨ · ¹ ³ ² ■\n\n\n\n</string>
    <string name="code_page852">Ç ü é â ä ů ć ç ł ë Ő ő î Ź Ä Ć\n
        É Ĺ ĺ ô ö Ľ ľ Ś ś Ö Ü Ť ť Ł × č\n
        á í ó ú Ą ą Ž ž Ę ę ¬ ź Č ş « »\n
        ░ ▒ ▓ │ ┤ Á Â Ě Ş ╣ ║ ╗ ╝ Ż ż ┐\n
        └ ┴ ┬ ├ ─ ┼ Ă ă ╚ ╔ ╩ ╦ ╠ ═ ╬ ¤\n
        đ Đ Ď Ë ď Ň Í Î ě ┘ ┌ █ ▄ Ţ Ů ▀\n
        Ó ß Ô Ń ń ň Š š Ŕ Ú ŕ Ű ý Ý ţ ´\n
        ˝ ˛ ˇ ˘ § ÷ ¸ ° ¨ ˙ ű Ř ř ■\n\n\n\n</string>
    <string name="code_page855">ђ Ђ ѓ Ѓ ё Ё є Є ѕ Ѕ і І ї Ї ј Ј\n
        љ Љ њ Њ ћ Ћ ќ Ќ ў Ў џ Џ ю Ю ъ Ъ\n
        а А б Б ц Ц д Д е Е ф Ф г Г « »\n
        ░ ▒ ▓ │ ┤ х Х и И ╣ ║ ╗ ╝ й Й ┐\n
        └ ┴ ┬ ├ ─ ┼ к К ╚ ╔ ╩ ╦ ╠ ═ ╬ ¤\n
        л Л м М н Н о О п ┘ ┌ █ ▄ П я ▀\n
        Я р Р с С т Т у У ж Ж в В ь Ь №\n
        ы Ы з З ш Ш э Э щ Щ ч Ч § ■\n\n\n\n</string>
</resources>